--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
     </header>
 
     <main>
-
+        <section id="demo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="box">
+                            <h2>To-Do</h2>
+                            <input type="text" placeholder="Please write">
+                            <div class="btn">add</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex align-items-center flex-column output">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
